--- a/index.html
+++ b/index.html
@@ -157,14 +157,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//www.parsecdn.com/js/parse-1.6.6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-    Parse.initialize("28I2KtJC7OSfMX7gh9UN5SGiif61bpUBzG9pdq8Z", "bm8W75dpSmvayu26EWikgyq8s263log6HNl4FWTW");
-    var TestObject = Parse.Object.extend("TestObject");
-var testObject = new TestObject();
-testObject.save({foo: "bar"}).then(function(object) {
-  alert("yay! it worked");
-});
-      
-    </script>
+    <script src="js/blog.js"></script>
+
   </body>
 </html>
