--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//www.parsecdn.com/js/parse-1.2.19.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
+    <script id="blogs-tpl" type="text/x-handlebars-template">
+      <div class="blog-post">
+          <h2 class="blog-post-title"><a href="#">{{title}}</a></h2>
+          <p class="blog-post-meta">At time by an author</p>
+          <div>{{{content}}}</div>
+      </div>
+    </script>
     <script src="js/blog.js"></script>
 
   </body>
