--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
 
         <div class="col-sm-8 blog-main">
-        
+          <div class="main-containe"></div>
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
