--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
 
         <div class="col-sm-8 blog-main">
-          <div class="main-containe"></div>
+          <div class="main-container"></div>
         </div><!-- /.blog-main -->
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
@@ -85,20 +85,23 @@
         <a href="#">Back to top</a>
       </p>
     </footer>
- 
+    <script id="blogs-tpl" type="text/x-handlebars-template">
+    {{#each blog}}
+      <div class="blog-post">
+          <h2 class="blog-post-title"><a href="#">{{title}}</a></h2>
+          <p class="blog-post-meta">{{updatedAt}}</p>
+          <div>{{{content}}}</div>
+      </div>
+    {{/each}}
+    </script>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//www.parsecdn.com/js/parse-1.2.19.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
-    <script id="blogs-tpl" type="text/x-handlebars-template">
-      <div class="blog-post">
-          <h2 class="blog-post-title"><a href="#">{{title}}</a></h2>
-          <p class="blog-post-meta">At time by an author</p>
-          <div>{{{content}}}</div>
-      </div>
-    </script>
+
     <script src="js/blog.js"></script>
 
   </body>
